# 15-Apr-java-existing-projects-qa-test

./: ProductRepository.java  application.properties
EP-Spring-Boot--main/: README.md  pom.xml
EP-Spring-Boot--main/python_app/: .env.example  README.md  app.py  config.py  extensions.py  pyproject.toml  requirements.txt  server.py
EP-Spring-Boot--main/python_app/controller/: __init__.py  product_controller.py  student_controller.py
EP-Spring-Boot--main/python_app/dao/: __init__.py  product_dao.py
EP-Spring-Boot--main/python_app/entity/: __init__.py  product.py
EP-Spring-Boot--main/python_app/repository/: __init__.py  product_repository.py
EP-Spring-Boot--main/python_app/responses/: __init__.py  response_structure.py
EP-Spring-Boot--main/python_app/schemas/: __init__.py  product_schema.py  response_structure_schema.py
EP-Spring-Boot--main/python_app/tests/: __init__.py  conftest.py  test_app.py
EP-Spring-Boot--main/src/main/java/com/jspider/spring_boot_simple_crud_with_mysql/: SpringBootSimpleCrudWithMysqlApplication.java
EP-Spring-Boot--main/src/main/java/com/jspider/spring_boot_simple_crud_with_mysql/controller/: AuthController.java  ProductController.java  StudentController.java
EP-Spring-Boot--main/src/main/java/com/jspider/spring_boot_simple_crud_with_mysql/dao/: ProductDao.java
EP-Spring-Boot--main/src/main/java/com/jspider/spring_boot_simple_crud_with_mysql/entity/: ERole.java  Role.java  User.java
EP-Spring-Boot--main/src/main/resources/: application.properties
EP-Spring-Boot--main/src/test/java/com/jspider/spring_boot_simple_crud_with_mysql/: SpringBootSimpleCrudWithMysqlApplicationTests.java
blitzy/documentation/: Project Guide.md  Technical Specifications.md
(+21 files in other folders)
